[package]
name = "feeder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "feeder"


[dependencies]
actix-web = "4"
config = "0.11"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"]}
dotenv = "0"
serde = { version = "1", features = ["derive"] }
serde-aux = "3"
serde_json = "1"
tracing = "0.1"
tracing-futures = "0"
tracing-log = { version = "0", features = ["env_logger"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }

[dependencies.sqlx]
version = "0.5"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
]